# SXR-Tools-Platform

./: index.html  package-lock.json  package.json  tsconfig.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: logger.rs  main.rs  uese_exe_runner.rs
src/assets/css/: normalize.css
src/components/: tools.vue
src/utlis/: communication.ts
