[package]
authors = ["you"]
description = "SXR 测试平台工具是一款专门为生产线上的R&D产品开发的桌面工具"
edition = "2021"
name = "sxr平台测试工具"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "^1.3", features = [] }

[dependencies]
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6.0", features = [ "api-all", "devtools"] }
tokio = {version = "1.38.0", features = ["full"] }
winreg = "0.52.0"

chrono = "0.4"
log = "0.4.8"
simplelog = {version = "0.12.0", features = ["local-offset"] }
time = "0.3"

dirs = "5.0.1"

pinyin = "0.10.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
